# gesture-recognition

./: config.cfg  detect.py  pyproject.toml  train.py
data/: data_loader.py  image.py  iterator.py
models/: resnet3d.py
utils/: dir.py  save_history.py
